Mon Jan 23 20:21:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Fixed again

Mon Jan 23 20:12:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Reverted change below, triggers error in normal build

Mon Jan 23 14:35:42 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toxmidefaults.mpb:
          Fixes for install builds

Mon Jan 23 12:55:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
          Reverted change below, the install is needed

Mon Jan 23 12:07:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
          Removed not needed post_install

Mon Jan 23 09:45:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
          Also build tools

Mon Jan 23 07:53:26 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_skel.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_stub.mpc:
          Fixes for install build

Sun Jan 22 19:03:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/DDS_Receiver/Hello_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Receiver/ObO_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Sender/ObO_Sender.cpp:
          Unicode fixes

Sun Jan 22 18:01:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_idltocpp_skel.mpc: