@@ -1,3 +1,9 @@
+Tue Jan 24 12:05:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/GetComponent/Event/Component/GCE_Test_Component_exec.cpp:
+        * connectors/dds4ccm/tests/GetComponent/State/Component/GCS_Test_Component_exec.cpp:
+          Narrow the result of _get_component to the connector interface
+
 Mon Jan 23 20:21:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/taobaseidl3toidl2defaults.mpb:
